# office-agent

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
installer/: setup.iss
launcher/Phase1/: ConsoleLauncher.cs  OfficeAgentLauncher.csproj
launcher/Phase2/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OfficeAgentWpf.csproj  SplashWindow.xaml  SplashWindow.xaml.cs
office_agent/: __init__.py  cli.py  config.py  gui.py
office_agent/agent/: core.py  prompt.py  validator.py
office_agent/llm/: __init__.py  base.py  llamacpp.py  mock.py  ollama.py
office_agent/schemas/: docx_schema.json  pptx_schema.json  xlsx_schema.json
office_agent/tools/: __init__.py  docx_tool.py  file_tool.py  pptx_tool.py  vba_tool.py  xlsx_tool.py
office_agent/update/: __init__.py  applier.py  packager.py  verifier.py
out_ollama/: title_value.docx  title_value_plan.json  売上集計.xlsx  売上集計_plan.json  新製品紹介.pptx  新製品紹介_plan.json
out_v3/: 3月度売上集計.xlsx  3月度売上集計_plan.json  名平檚でた詌だ本日にるを橌ちはター・スバルクス.docx  名平檚でた詌だ本日にるを橌ちはター・スバルクス_plan.json  新製品紹介.pptx  新製品紹介_plan.json
out_v4/: 2026年3月度売上集計.xlsx  2026年3月度売上集計_plan.json  4月度営業報告書.docx  4月度営業報告書_plan.json  新製品紹介.pptx  新製品紹介_plan.json
pyinstaller/: entry.py  office_agent.spec
tests/: conftest.py  test_cli.py  test_docx.py  test_file_tool.py  test_integration.py  test_integration_ollama.py  test_llm.py  test_orchestrator.py  test_pptx.py  test_prompt.py  test_update.py  test_validator.py  test_vba.py  test_xlsx.py
(+9 files in other folders)
